--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "supports-color": "^8.1.1",
     "tree-kill": "^1.2.2",
     "tslib": "^2.8.1",
-    "typescript": "^5.8.3",
     "undici-types": "^7.10.0",
     "wrap-ansi": "^7.0.0",
     "ws": "^8.18.2",
@@ -37,7 +36,8 @@
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
-    "@types/ws": "^8.18.1"
+    "@types/ws": "^8.18.1",
+    "typescript": "^5.8.3"
   },
   "scripts": {
     "build": "tsc",
